# SR-rules

./: ReadMe.md  general.txt  main.py  pyproject.toml  rules-set.yaml
